# cnf49-compiler

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  SufferLang.cpp  cmake_install.cmake  comp  comp.cpp  ir441  parser.cpp  parser.h  sample.prg  stack.prg  untyped_comp  vn.prg
IR/: CMakeLists.txt  ir.cpp  ir.h  irbuilder.h
artifacts/: typed_trace.txt  untyped_trace.txt
compdef/: CMakeLists.txt  Makefile  cmake_install.cmake  ir.cpp  ir.h  ssa.cpp
frontend/: ASTNodes.cpp  ASTNodes.h  ASTtoIR.cpp  CMakeLists.txt  Makefile  cmake_install.cmake  irbuilder.cpp  irbuilder.h  parser.cpp  parser.h  tokenizer.cpp  tokenizer.h
irpasses/: CMakeLists.txt  ir.cpp  ir.h  ssa.cpp  vn.cpp
opt/: CMakeLists.txt
parser/: ASTNodes.h  ASTtoIR.cpp  CMakeLists.txt  parser.cpp  parser.h  tokenizer.cpp  tokenizer.h
passes/: CMakeLists.txt
programs/: memhog.prg  sample.prg  stack.prg  stack_untyped.prg
